--- a/skins/ovidentia/templates/uiutil.html
+++ b/skins/ovidentia/templates/uiutil.html
@@ -69,7 +69,7 @@
 	//]]>
 	</script>
 </head>
-<body class="babbodypopup BabContentBackground">
+<body class="babbodypopup BabContentBackground <!--#if tg -->{ tg }<!--#endif tg -->">
 	<!--#if menuitems -->
 	<table class="BabSiteAdminFontBackground" width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
 	<tr> 
