--- a/skins/ovidentia/templates/uiutil.html
+++ b/skins/ovidentia/templates/uiutil.html
@@ -1,22 +1,20 @@
 <!--#begin popupunload -->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{ babLanguage }" lang="{ babLanguage }">
+<!DOCTYPE html>
+<html lang="{ babLanguage }">
 	<head>
 		<title>{ babSiteName }</title>
 		{ babMeta }
 		{ babCss }
 		<meta http-equiv="Content-type" content="{ sContent }"/>
 		<script type="text/javascript">
-		//<![CDATA[
 		window.focus();
-		//]]>
 		</script>
 	</head>
 	<!--#if redirecturl -->
-	<body onUnload="javascript:this.opener.location.href='{ redirecturl }';">
+	<body onunload="this.opener.location.href='{ redirecturl }';">
 	<!--#else redirecturl -->
 	<!--#if openerreload -->
-	<body onUnload="this.opener.location.reload()">
+	<body onunload="this.opener.location.reload()">
 	<!--#else openerreload -->
 	<body>
 	<!--#endif openerreload -->
@@ -40,34 +38,35 @@
 	<br />
 	<!--#if autoclose -->
 	<script type="text/javascript">
-	//<![CDATA[
-		setTimeout("this.close()","1000");
-	//]]>
+		window.setTimeout("this.close()","1000");
 	</script>
 	<!--#endif autoclose -->
-	</BODY>
-</HTML>
+	</body>
+</html>
 <!--#end popupunload -->
 
+
+
+
+
 <!--#begin babbodypopup -->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{ babLanguage }" lang="{ babLanguage }">
-  <head>
-	<title>{ babSiteName } <!--#if title --> - { title } <!--#endif title --></title>
-	{ babMeta }
-	{ babCss }
-	<meta http-equiv="Content-type" content="{ sContent }"/>
-	<style type="text/css">
-	<!--#in getnextstylesheet -->
-	@import url('{ babInstallPath }styles/{ file }');
-	<!--#endin getnextstylesheet -->
+<!DOCTYPE html>
+<html lang="{ babLanguage }">
+<head>
+	<title>{ babSiteName } <!--#if title --> - { title }<!--#endif title --></title>
+	<base href="{ babUrlScript }" />
+    <meta http-equiv="Content-type" content="{ sContent }"/>
 
-	</style>
+    <link rel="shortcut icon" href="skins/{ babSkin }/images/favicon.ico" />
+    <link rel="icon" href="skins/{ babSkin }/images/favicon.ico" />
 
-	<script type="text/javascript" src="{ babOvidentiaJs }">
-	//<![CDATA[
-	//]]>
-	</script>
+    <link rel="stylesheet" type="text/css" href="{ babCssPath }" media="screen" title="Default" />
+
+<!--#in getNextStyleSheet -->
+    <link rel="stylesheet" type="text/css" href="{ styleSheet }" />
+<!--#endin getNextStyleSheet -->
+
+	<script type="text/javascript" src="{ babOvidentiaJs }"></script>
 </head>
 <body class="babbodypopup BabContentBackground <!--#if tg -->{ tg }<!--#endif tg -->">
 	<!--#if menuitems -->
@@ -116,6 +115,10 @@
 </html>
 <!--#end babbodypopup -->
 
+
+
+
+
 <!--#begin babeditortemplate -->
 <!--#if loadscripts -->
 <!--#if first -->
@@ -153,12 +156,19 @@
 <!--#end babeditortemplate -->
 
 
+
+
+
 <!--#begin babtexttoolbartemplate -->
 <div id="{ editname }_text_toolbar" class="bab_text_toolbar">
 	<a href="#" onclick="global_textarea_id = '{ uid }';insert_ovidentia();return false;">{ t_insert_ovidentia }</a>
 </div>
 <input type="hidden" id="{ editname }_textmode" name="bab_editor_textmode[]" value="{ editname }" />
 <!--#end babtexttoolbartemplate -->
+
+
+
+
 
 <!--#begin styleSheet -->
 <style type="text/css">
