Fix issue with Orgcharts. Add option to notify the author in calendar events.

--- a/skins/ovidentia/templates/sites.html
+++ b/skins/ovidentia/templates/sites.html
@@ -848,6 +848,13 @@ document.forms.formsite_bloc3[edit].value = obj.value;
 										<option value="Y" { ypcalaccess }>{ yes }</option>
 								</select>
 							</dl>
+							<dl>
+								<h5>{ t_callendarnotif }</h5>
+								<select name="calendar_notif_author">
+										<option value="N" { ncallendarnotif }>{ no }</option>
+										<option value="Y" { ycallendarnotif }>{ yes }</option>
+								</select>
+							</dl>
 						</td>
 					</tr>
 					<tr>
