--- a/skins/ovidentia/templates/approb.html
+++ b/skins/ovidentia/templates/approb.html
@@ -138,8 +138,7 @@ window.focus();
 	<table  border="0" width="100%" cellpadding="5" cellspacing="0">
 	<thead>
 	<tr class="BabSiteAdminTitleFontBackground"> 
-		<td>{ addonTitle }</td>
-		<td width="150" align="center" colspan="2">{ t_accept_or_refuse }</td>
+		<td colspan="3">{ addonTitle }</td>
 	</tr>
 	</thead>
 	<!--#in getnextitem -->
@@ -154,7 +153,7 @@ window.focus();
 		<div class="bab-waiting-item-description">{ description }</div>
 	</td>
 	<td align="center" width="100">
-		<a href="<!--#if popup -->javascript:bab_popup('{ url }');<!--#else popup -->{ url }<!--#endif popup -->"><img src="{ babSkinPath }images/Puces/confirm.gif" border="0" alt=""></a>
+		<a href="{ url }" <!--#if popup --> onclick="bab_popup(this.href);return false;" <!--#endif popup --> title="{ t_accept_or_refuse }"><img src="{ babSkinPath }images/48x48/comment_accept.png" border="0" alt="{ t_accept_or_refuse }"></a>
 	</td>
 	<td align="center" width="50">
 		<!--#if checkbox_value -->
