prevent horizontal scrollbar in the print view, increase size of the "premiers-pas" popup

--- a/skins/ovidentia/templates/articleprint.html
+++ b/skins/ovidentia/templates/articleprint.html
@@ -70,7 +70,7 @@ function textsize(param)
 </script>
 </HEAD>
 <BODY>
-<div style="width:100%;border-bottom:#000000 1px solid;padding:0.5em;">{ url } - { babUrl }<!--#if content --> - <span class="printhide"><a href="javascript:hide_div('print_head')">{ print_head }</a> - <a href="javascript:hide_div('print_content')">{ print_body }</a></span><!--#endif content --></div>
+<div style="border-bottom:#000000 1px solid;padding:0.5em;">{ url } - { babUrl }<!--#if content --> - <span class="printhide"><a href="javascript:hide_div('print_head')">{ print_head }</a> - <a href="javascript:hide_div('print_content')">{ print_body }</a></span><!--#endif content --></div>
 <div>
 	<h3 align="center">{ title }</h3>
 	<div id="print_head" style="padding:1em;">{ head }</div>
