fix javascript links with # as url

--- a/skins/ovidentia/templates/admfms.html
+++ b/skins/ovidentia/templates/admfms.html
@@ -617,7 +617,7 @@ onclick="selectAllFiles(document.ordfiles.elements[6]); document.ordfiles.submit
 						<td class="BabSiteAdminTitleFontBackground" align="left" nowrap="nowrap" valign="middle">&nbsp;</td>
 						<td class="BabSiteAdminTitleFontBackground" align="left" nowrap="nowrap" valign="middle">&nbsp;</td>
 						<td class="BabSiteAdminTitleFontBackground" align="right" valign="middle">
-							<a href="#" onclick="submitForm('delff', 'fmfield')">
+							<a href="#" onclick="submitForm('delff', 'fmfield'); return false;">
 								<img src="{ babSkinPath }images/Puces/del.gif" alt="{ altdelf }" border="0" />
 							</a>
 						</td>
