--- a/skins/ovidentia/templates/admocs.html
+++ b/skins/ovidentia/templates/admocs.html
@@ -315,7 +315,7 @@ function org_mm()
 <tr class="BabForumBackground1">
 <td align="center" valign="middle" width="1%" >&nbsp;</td>
 <td align="center" valign="middle" width="1%" >
-<a class="BabNameEmailLink" href="#" onclick="self.opener.{ cb }(0, '{ lmrolename1 }')"><img src="{ babSkinPath }images/Puces/contact.png" border="0"></a>
+<a class="BabNameEmailLink" href="#" onclick="self.opener.{ cb }(0, '{ lmrolename1 }'); return false;"><img src="{ babSkinPath }images/Puces/contact.png" border="0"></a>
 </td>
 
 <td align="left" valign="middle" colspan="3">{ lmrolename1 }</td>
@@ -325,7 +325,7 @@ function org_mm()
 <tr class="BabSiteAdminFontBackground">
 <td align="center" valign="middle" width="1%" >&nbsp;</td>
 <td align="center" valign="middle" width="1%" >
-<a class="BabNameEmailLink" href="#" onclick="self.opener.{ cb }(-1, '{ lmrolename2 }')"><img src="{ babSkinPath }images/Puces/contact.png" border="0"></a>
+<a class="BabNameEmailLink" href="#" onclick="self.opener.{ cb }(-1, '{ lmrolename2 }'); return false;"><img src="{ babSkinPath }images/Puces/contact.png" border="0"></a>
 </td>
 
 <td align="left" valign="middle" colspan="3">{ lmrolename2 }</td>
@@ -337,7 +337,7 @@ function org_mm()
 <tr class="BabForumBackground1">
 <td align="center" valign="middle" width="1%" >&nbsp;</td>
 <td align="center" valign="middle" width="1%" >
-<a class="BabNameEmailLink" href="#" onclick="self.opener.{ cb }(-2, '{ lmrolename3 }')"><img src="{ babSkinPath }images/Puces/contact.png" border="0"></a>
+<a class="BabNameEmailLink" href="#" onclick="self.opener.{ cb }(-2, '{ lmrolename3 }'); return false;"><img src="{ babSkinPath }images/Puces/contact.png" border="0"></a>
 </td>
 <td align="left" valign="middle" colspan="3">{ lmrolename3 }</td>
 
@@ -353,7 +353,7 @@ function org_mm()
 <td align="center" valign="middle" width="1%" >&nbsp;</td>
 <td align="center" valign="middle" width="1%" >
 <!--#if username -->
-<a class="BabNameEmailLink" href="#" onclick="self.opener.{ cb }({ roleid }, '{ jrole }')"><img src="{ babSkinPath }images/Puces/contact.png" border="0"></a>
+<a class="BabNameEmailLink" href="#" onclick="self.opener.{ cb }({ roleid }, '{ jrole }'); return false;"><img src="{ babSkinPath }images/Puces/contact.png" border="0"></a>
 <!--#endif username -->
 </td>
 
