--- a/skins/ovidentia/templates/delegat.html
+++ b/skins/ovidentia/templates/delegat.html
@@ -348,7 +348,7 @@ function ovidentia_optionsdelegations_onCheckAll(state){
 				<!--#endin getnext -->
 				<tr class="BabSiteAdminTitleFontBackground"> 
 					<td>&nbsp;</td>
-					<td align="center" nowrap="nowrap"><a href="#" onclick="onCheckAll('users', true)"><img src="{ babSkinPath }images/Puces/Pucecheked.gif" alt="{ checkall }" border="0" /></a><a href="#" onclick="onCheckAll('users', false)"><img src="{ babSkinPath }images/Puces/PuceUncheked.gif" alt="{ uncheckall }"  border="0" /></a></td>
+					<td align="center" nowrap="nowrap"><a href="#" onclick="onCheckAll('users', true);return false;"><img src="{ babSkinPath }images/Puces/Pucecheked.gif" alt="{ checkall }" border="0" /></a><a href="#" onclick="onCheckAll('users', false)"><img src="{ babSkinPath }images/Puces/PuceUncheked.gif" alt="{ uncheckall }"  border="0" /></a></td>
 				</tr>
 				</table>
 			</td>
