--- a/skins/ovidentia/templates/fltchart.html
+++ b/skins/ovidentia/templates/fltchart.html
@@ -9,7 +9,7 @@
 	</tr>
 	<tr class="BabSiteAdminFontBackground"> 
 		<td width="90%" align="left" valign="middle">
-			&nbsp;&nbsp;&nbsp;<a class="BabNameEmailLink" href="#" onclick="top.flb.document.location.href='{ superiorurl }'">{ superiortitle }</a>
+			&nbsp;&nbsp;&nbsp;<a class="BabNameEmailLink" href="#" onclick="top.flb.document.location.href='{ superiorurl }'; return false;">{ superiortitle }</a>
 <!--#if bsuperior -->
 &nbsp;<img src="{ babSkinPath }images/Puces/PuceOnline.gif" alt="" align="absmiddle">
 <!--#endif bsuperior -->
@@ -31,7 +31,7 @@
 	</tr>
 	<tr class="BabSiteAdminFontBackground"> 
 		<td width="90%" align="left" valign="middle">
-			&nbsp;&nbsp;&nbsp;<a class="BabNameEmailLink" href="#" onclick="top.flb.document.location.href='{ temporaryurl }'">{ temporarytitle }</a>
+			&nbsp;&nbsp;&nbsp;<a class="BabNameEmailLink" href="#" onclick="top.flb.document.location.href='{ temporaryurl }'; return false;">{ temporarytitle }</a>
 <!--#if btemporary -->
 &nbsp;<img src="{ babSkinPath }images/Puces/PuceOnline.gif" alt="" align="absmiddle">
 <!--#endif btemporary -->
@@ -57,7 +57,7 @@
 			<b>{ collaboratorentity }</b>
 <!--#in getnext -->
 			<br>
-			&nbsp;&nbsp;&nbsp;<a class="BabNameEmailLink" href="#" onclick="top.flb.document.location.href='{ collaboratorurl }'">{ collaboratortitle }</a>
+			&nbsp;&nbsp;&nbsp;<a class="BabNameEmailLink" href="#" onclick="top.flb.document.location.href='{ collaboratorurl }'; return false;">{ collaboratortitle }</a>
 <!--#if buser -->
 &nbsp;<img src="{ babSkinPath }images/Puces/PuceOnline.gif" alt="" align="absmiddle">
 <!--#endif buser -->
