--- a/skins/ovidentia/templates/frchart.html
+++ b/skins/ovidentia/templates/frchart.html
@@ -875,7 +875,7 @@ function org_mm()
 <tr class="BabForumBackground1">
 <!--#endif altbg --> 
 <td align="center" valign="middle" width="1%" >&nbsp;</td>
-<td align="center" valign="middle" width="1%" ><!--#if userid --><a class="BabNameEmailLink" href="#" onclick="updateFlbFrame('{ entityid }&idx=detr&iduser={ userid }');updateFltFrame('{ entityid }&idx=listr')"><img src="{ babSkinPath }images/Puces/contact.png" border="0"></a><!--#endif userid -->&nbsp;</td>
+<td align="center" valign="middle" width="1%" ><!--#if userid --><a class="BabNameEmailLink" href="#" onclick="updateFlbFrame('{ entityid }&idx=detr&iduser={ userid }');updateFltFrame('{ entityid }&idx=listr'); return false;"><img src="{ babSkinPath }images/Puces/contact.png" border="0"></a><!--#endif userid -->&nbsp;</td>
 
 <td align="left" valign="middle">{ rolename }<img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="1" height="1" border="0"></td>
 <td align="left" valign="middle">{ entityname }<img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="1" height="1" border="0"></td>
