--- a/skins/ovidentia/templates/lsa.html
+++ b/skins/ovidentia/templates/lsa.html
@@ -28,7 +28,7 @@ valign="middle">&nbsp;</td>
 <tr> 
 <td width="1%" align="right" nowrap valign="middle"> 
 &nbsp; </td>
-<td class="BabSiteAdminFontBackground" valign="middle"><a class="BabNameEmailLink" href="#" onclick="self.opener.{ cb }({ said }, '{ saname }')">{ sanameval }</a> </td>
+<td class="BabSiteAdminFontBackground" valign="middle"><a class="BabNameEmailLink" href="#" onclick="self.opener.{ cb }({ said }, '{ saname }'); return false;">{ sanameval }</a> </td>
 <td class="BabSiteAdminFontBackground" valign="middle">{ descval }</td>
 </tr>
 <!--#endin getnext -->
