--- a/skins/ovidentia/templates/statconf.html
+++ b/skins/ovidentia/templates/statconf.html
@@ -345,7 +345,7 @@ function co_selectItem(tab) {
 <td class="BabLoginCadreBackground" align="center" valign="middle"> 
 <table  width="100%" border="0" cellspacing="0" cellpadding="5" align="center">
 <tr> 
-<td class="BabLoginMenuBackground" align="right" nowrap valign="middle"><a href="#" onclick="bab_dialog.select{ t_what }(co_selectItem, '{ t_dialog_attributes }');">{ t_name }</a>:</td>
+<td class="BabLoginMenuBackground" align="right" nowrap valign="middle"><a href="#" onclick="bab_dialog.select{ t_what }(co_selectItem, '{ t_dialog_attributes }'); return false;">{ t_name }</a>:</td>
 <td class="BabLoginMenuBackground" valign="middle"> 
 <input type="text" id="ibcname" name="ibcname" size="60" value="{ ibcnameval }" disabled>
 <input type="hidden" id="ibcid" name="ibcid" size="60" value="">
