--- a/skins/ovidentia/templates/directory.html
+++ b/skins/ovidentia/templates/directory.html
@@ -258,7 +258,7 @@ window.focus();
         <!--#in getnext -->
         <!--#if altbg --><tr class="BabForumBackground"><!--#else altbg --><tr class="BabForumBackground1"><!--#endif altbg --> 
           <td align="center" valign="middle" width="1%" >&nbsp;</td>
-          <td align="center" valign="middle" width="1%" ><a class="BabNameEmailLink" href="#" onclick="self.opener.{ cb }({ userid }, '{ firstlast }')"><img src="{ babSkinPath }images/Puces/contact.png" border="0"></a></td>
+          <td align="center" valign="middle" width="1%" ><a class="BabNameEmailLink" href="#" onclick="self.opener.{ cb }({ userid }, '{ firstlast }'); return false;"><img src="{ babSkinPath }images/Puces/contact.png" border="0"></a></td>
           <!--#in getnextcolval -->
           <td align="left" valign="middle">{ coltxt }<img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="1" height="1" border="0"></td>
           <!--#endin getnextcolval -->
