--- a/skins/ovidentia/templates/fileman.html
+++ b/skins/ovidentia/templates/fileman.html
@@ -1452,7 +1452,7 @@ function on_cancel()
 		</tr>
 		<tr>
 			<td class="BabWarningBodyBackground" align="center">
-				<a class="BabWarningLinkColor" href="#" onclick="on_delete()">{ m_captions[yes] }</a> | <a class="BabWarningLinkColor" href="#" onclick="on_cancel()">{ m_captions[no] }</a>
+				<a class="BabWarningLinkColor" href="#" onclick="on_delete(); return false;">{ m_captions[yes] }</a> | <a class="BabWarningLinkColor" href="#" onclick="on_cancel(); return false;">{ m_captions[no] }</a>
 			</td>
 		</tr>
 	</table>
