Fix stylesheet loading

--- a/ovidentia/skins/ovidentia/templates/uiutil.html
+++ b/ovidentia/skins/ovidentia/templates/uiutil.html
@@ -173,7 +173,7 @@
 <!--#begin styleSheet -->
 <style type="text/css">
 <!--#in getnextstylesheet -->
-@import url('{ babInstallPath }styles/{ file }');
+@import url('{ file }');
 <!--#endin getnextstylesheet -->
 </style>
 <!--#end styleSheet -->
