dissociate search by letter and search by form

--- a/ovidentia/skins/ovidentia/templates/users.html
+++ b/ovidentia/skins/ovidentia/templates/users.html
@@ -26,7 +26,7 @@ function bab_userListShowHideFilter()
 <form method="post" action="{ babPhpSelf }" name="listform">
 <input type="hidden" name="tg" value="users" />
 <input type="hidden" name="idx" value="List" />
-<input type="hidden" name="pos" value="{ pos }" />
+<input type="hidden" name="pos" value="" />
 <input type="hidden" name="grp" value="{ grp }" />
 <input type="hidden" name="bupd" value="{ bupdate }" />
 
