Remove classification by firstname in user select popup

--- a/ovidentia/skins/ovidentia/templates/lusers.html
+++ b/ovidentia/skins/ovidentia/templates/lusers.html
@@ -35,7 +35,7 @@ function setcallbackuser(userid, username ) {
 	</tr>
 	<tr class="BabSiteAdminTitleFontBackground"> 
 
-		<td><a class="BabSiteAdminListLink" href="{ fullnameurl }">{ fullname }</a></td>
+		<td>{ fullname }</td>
 		<td>{ nickname }</td>
 	</tr>
 	<!--#in getnext -->
