Set/get language via api

--- a/ovidentia/skins/ovidentia/templates/sites.html
+++ b/ovidentia/skins/ovidentia/templates/sites.html
@@ -95,6 +95,7 @@
             <td>{ lang }</td>
             <td> 
               <select name="lang">
+                  <option value="">{ t_lang_default }</option>
                   <!--#in getnextlang -->
                   <option value="{ langval }"  <!--#if langselected --> selected="selected" <!--#endif langselected --> >{ langval }</option>
                   <!--#endin getnextlang -->
