--- a/ovidentia/skins/ovidentia/templates/articles.html
+++ b/ovidentia/skins/ovidentia/templates/articles.html
@@ -73,12 +73,15 @@ window.focus();
 	<!--#endin getnextdoc -->
 	<!--#endif countf -->
 
-	<!--#if countcom -->
+	<!--#if cancomment_or_countcom -->
 	<tr>
 		<td class="BabSiteAdminTitleFontBackground">{ commentstxt }</td>
 	</tr>
 	<tr>
 		<td>
+		  { addcommenteditor }
+		
+		  <!--#if countcom -->
 			<table  width="100%" border="0" cellspacing="0" cellpadding="2" align="center">
 				<tr> 
 					<td class="BabLoginMenuBackground"> 
@@ -98,9 +101,11 @@ window.focus();
 					</td>
 				</tr>
 			</table>
+			<!--#endif countcom -->
 		</td>
 	</tr>
-	<!--#endif countcom -->
+	<!--#endif cancomment_or_countcom -->
+	
 	<tr>
 		<td colspan="2" align="center">
 		<br />
