--- a/ovidentia/skins/ovidentia/templates/comments.html
+++ b/ovidentia/skins/ovidentia/templates/comments.html
@@ -82,45 +82,45 @@
 	
 <tr>
 <td>
-	<table class="BabLoginMenuBackground" width="100%" border="0" cellspacing="0" cellpadding="3">
+	<table class="BabLoginMenuBackground" width="100%" border="0" cellspacing="0" cellpadding="10">
 	<tr> 
-		<td class="BabLoginMenuBackground" align="left" nowrap>{ add }:</td>
-	</tr>
-	<tr> 
-		<td align="center" nowrap>{ subject }:</td>
-	</tr>
-	<tr>
-		<td align="center" nowrap> 
-			<input type="text" name="subject" size="60" maxlength="60" value="{ subjectval }">
-		</td>
+		<td align="left" colspan="2"><h4>{ add }</h4></td>
 	</tr>
 	<tr> 
-		<td align="center">
-		{ message }:
-		</td>
-	</tr>
-	<tr>
+		<td width="30%" align="right">{ subject }:</td>
 		<td align="center"> 
-			{ editor }
+			<input type="text" name="subject" size="60" maxlength="60" value="{ subjectval }" style="width:100%">
+		</td>
+	</tr>
+	<tr>
+		<td align="center" colspan="2"> 
+			<textarea name="message" rows="6" style="width:100%">{ messageval }</textarea>
 		</td>
 	</tr>
 
 	<!--#if useCaptcha -->
+	
+	<tr> 
+        <td align="right">{ name } <span style="color:red">*</span>:</td>
+
+        <td align="center"> 
+            <input type="text" name="name" size="60" maxlength="60" value="{ nameval }" required="true" style="width:100%">
+        </td>
+    </tr>
+	
 	<tr>
-		<td align="center">
-			{ captchaCaption2 }:
-		</td>
-	</tr>
-	<tr>
-		<td align="center" valign="top">
+		<td align="center" colspan="2" class="captcha">
+			
+		
 			{ captchaSecurityData }
-			<input type="text" name="captchaSecurityCode" size="10" value="" style="vertical-align: top" />
+			<input type="text" name="captchaSecurityCode" size="10" value="" style="vertical-align: top" /><br />
+			<small><em>{ captchaCaption2 }</em></small>
 		</td>
 	</tr>
 	<!--#endif useCaptcha -->
 
 	<tr> 
-		<td align="center">
+		<td align="center" colspan="2">
 			<input type="submit" name="submit" value="{ add }" />
 
 		</td>
@@ -169,7 +169,7 @@
 	</tr>
 	<tr>
 		<td align="center"> 
-			{ editor }
+			<textarea name="message" rows="6" style="width:100%">{ messageval }</textarea>
 		</td>
 	</tr>
 
