--- a/ovidentia/skins/ovidentia/templates/topicsdisplay.html
+++ b/ovidentia/skins/ovidentia/templates/topicsdisplay.html
@@ -122,7 +122,7 @@ Variables in "body_default" :
 	  &nbsp;&nbsp;
       <a class="BabTopicsFooterLink" href="{ printurl }" target="_blank" rel="nofollow"><img src="{ babSkinPath }images/16x16/printer.png" border="0" alt="{ printtxt }" align="absmiddle">&nbsp;{ printtxt }</a>
 	  <!--#if commentstxt -->
-	  &nbsp;&nbsp;<a class="BabTopicsFooterLink" href="{ commentsurl }" target="_blank" onclick="bab_popup('{ commentsurl }', 6);return false;"><img src="{ babSkinPath }images/16x16/story-editor.png" border="0" alt="{ commentstxt }" align="absmiddle">&nbsp;{ commentstxt }</a>
+	  &nbsp;&nbsp;<a class="BabTopicsFooterLink" href="{ commentsurl }"><img src="{ babSkinPath }images/16x16/story-editor.png" border="0" alt="{ commentstxt }" align="absmiddle">&nbsp;{ commentstxt }</a>
 	  <!--#endif commentstxt -->
 	  &nbsp;&nbsp;
 		  <span class="bab-article-{ articleid }"></span>
@@ -241,9 +241,8 @@ Variables in "body_default" :
 			<!--#endif bmodifyurl -->
 			<!--#endif bmodify -->
 			&nbsp;&nbsp;
-			<a class="BabTopicsFooterLink" href="{ printurl }" target="_blank" rel="nofollow"><img src="{ babSkinPath }images/16x16/printer.png" border="0" alt="{ printtxt }" align="absmiddle">&nbsp;{ printtxt }</a><!--#if commentstxt -->&nbsp;&nbsp;<a class="BabTopicsFooterLink" href="{ editcommentsurl }" target="_blank" onclick="bab_popup('{ editcommentsurl }', 6);return false;"><img src="{ babSkinPath }images/16x16/story-editor.png" border="0" alt="{ commentstxt }" align="absmiddle">&nbsp;{ commentstxt }</a><!--#endif commentstxt -->
-			&nbsp;&nbsp;
-		    <span class="bab-article-{ babtpl_articleid }"></span>
+			<a class="BabTopicsFooterLink" href="{ printurl }" target="_blank" rel="nofollow"><img src="{ babSkinPath }images/16x16/printer.png" border="0" alt="{ printtxt }" align="absmiddle">&nbsp;{ printtxt }</a>
+			<span class="bab-article-{ babtpl_articleid }"></span>
 		</td>
 	</tr>
 	</table>
@@ -253,17 +252,22 @@ Variables in "body_default" :
 <tr>
 <td  valign="top">
 <!--#begin commentslist -->
+
+<!--#if cancomment_or_countcom -->
+<br />
+<br />
+
+{ addcommenteditor }
+
+
 <!--#if countcom -->
 <br />
+<h4 class="BabSiteAdminTitleFontBackground">{ commenttxt }:</h4>
+
 <table  width="100%" border="0" cellspacing="0" cellpadding="2">
 <tr> 
 <td class="BabLoginCadreBackground" valign="middle">
 	<table width="100%" border="0" cellspacing="0" cellpadding="2">
-	<thead>
-	<tr>
-		<td class="BabSiteAdminTitleFontBackground" colspan="2">{ commenttxt }:</td>
-	</tr>
-	</thead>
 	<!--#in getnextcom -->
 	<!--#if altbg -->
 	<tbody class="BabSiteAdminFontBackground">
@@ -289,6 +293,7 @@ Variables in "body_default" :
 </tr>
 </table>
 <!--#endif countcom -->
+<!--#endif cancomment_or_countcom -->
 <!--#end commentslist -->
 </td>
 </tr>
