Add a function to send delete link as POST using a onclick attribute

--- a/ovidentia/skins/ovidentia/templates/addons.html
+++ b/ovidentia/skins/ovidentia/templates/addons.html
@@ -193,7 +193,7 @@ function deladdon(id)
 						&nbsp;&nbsp;
 
 						<!--#if deleteurl -->
-						<a href="{ deleteurl }" title="{ confirmdelete }" onclick="return confirm(this.title);" style="white-space:nowrap;"><img alt="" border="0" src="{ babSkinPath }images/Puces/del.gif" align="absmiddle" />&nbsp;{ t_delete }</a>
+						<a href="{ deleteurl }" title="{ confirmdelete }" onclick="return bab_postLinkConfirm(this);" style="white-space:nowrap;"><img alt="" border="0" src="{ babSkinPath }images/Puces/del.gif" align="absmiddle" />&nbsp;{ t_delete }</a>
 						<!--#endif deleteurl -->
 						
 						&nbsp;&nbsp;
