--- a/ovidentia/skins/ovidentia/templates/warning.html
+++ b/ovidentia/skins/ovidentia/templates/warning.html
@@ -13,7 +13,7 @@
 </td>
   </tr>
   <tr>
-    <td class="BabWarningBodyBackground" align="center"><a href="{ urlyes }">{ yes }</a> | <a href="{ urlno }">{ no }</a></td>
+    <td class="BabWarningBodyBackground" align="center"><a href="{ urlyes }" onclick="return bab_postLinkConfirm(this);">{ yes }</a> | <a href="{ urlno }">{ no }</a></td>
   </tr>
 </table>
 <br />
