--- a/ovidentia/skins/ovidentia/templates/delegat.html
+++ b/ovidentia/skins/ovidentia/templates/delegat.html
@@ -203,7 +203,7 @@ function ovidentia_optionsdelegations_onCheckAll(state){
 								<div style="position: relative;width: 100%;">
 									<img alt="{ sImageName }" src="{ sImageURL }">
 									<div style="position: absolute;top: 3px;left: 0px;width: 100%;">
-										<a onclick="return confirm('{ sImageRemoveConfirm }')" style="background: url('ovidentia/skins/ovidentia/images/22x22/stop.png') no-repeat rgb(0.5, 0.5, 0.5); background: url('ovidentia/skins/ovidentia/images/22x22/stop.png') no-repeat rgba(0, 0, 0, 0.5); color: white; padding:3px 10px 5px 22px;" href="{ sImageRemoveUrl }">{ sImageRemove }</a>
+										<a title="{ sImageRemoveConfirm }" onclick="return bab_postLinkConfirm(this);" style="background: url('ovidentia/skins/ovidentia/images/22x22/stop.png') no-repeat rgb(0.5, 0.5, 0.5); background: url('ovidentia/skins/ovidentia/images/22x22/stop.png') no-repeat rgba(0, 0, 0, 0.5); color: white; padding:3px 10px 5px 22px;" href="{ sImageRemoveUrl }">{ sImageRemove }</a>
 									</div>
 								</div>
 							</td>
