--- a/ovidentia/skins/ovidentia/templates/fileman.html
+++ b/ovidentia/skins/ovidentia/templates/fileman.html
@@ -525,7 +525,7 @@ function hideDelegationSubmitBtn()
 								
 							<!--#endif bDownload -->
 							<!--#if bUnZip -->
-							<a onclick="return confirm('{ unzipconfirmtxt }')" href="{ unzipurl }">
+							<a title="{ unzipconfirmtxt }" onclick="return bab_postLinkConfirm(this);" href="{ unzipurl }">
 								<img title="{ unziptxt }" src="{ babSkinPath }images/Puces/zip.gif" border="0" align="middle" />
 							<a/>
 							<!--#endif bUnZip -->
