--- a/ovidentia/skins/ovidentia/templates/posts.html
+++ b/ovidentia/skins/ovidentia/templates/posts.html
@@ -285,7 +285,7 @@ class="BabForumTopicsNavContribution" href="{ confirmurl }">{ confirmname }</a><
 <a class="BabForumTopicsNavContribution" href="{ moreurl }">{ morename }</a><img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="5" height="1" border="0">
 <!--#endif moreurl -->
 <!--#if removeurl --> 
-<a class="BabForumTopicsNavContribution" href="{ removeurl }" onclick="return confirm('{ removeconfirmtxt }')">{ removetxt }</a><img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="5" height="1" border="0">
+<a class="BabForumTopicsNavContribution" href="{ removeurl }" title="{ removeconfirmtxt }" onclick="return bab_postLinkConfirm(this);">{ removetxt }</a><img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="5" height="1" border="0">
 <!--#endif removeurl --> 
 <!--#if replyurl --> 
 <a class="BabForumTopicsNavContribution" href="{ replyurl }">{ reply_txt }</a><img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="5" height="1" border="0">
@@ -588,7 +588,7 @@ class="BabForumTopicsNavContribution" href="{ confirmurl }">{ confirmname }</a><
 		<a  href="{ moreurl }">{ morename }</a><img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="5" height="1" border="0">
 		<!--#endif moreurl --> 
 		<!--#if removeurl --> 
-		<a href="{ removeurl }" onclick="return confirm('{ removeconfirmtxt }')">{ removetxt }</a><img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="5" height="1" border="0">
+		<a href="{ removeurl }" title="{ removeconfirmtxt }" onclick="return confirm(this);">{ removetxt }</a><img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="5" height="1" border="0">
 		<!--#endif removeurl --> 
 		</td>
 		</tr>
