add security tests

--- a/ovidentia/skins/ovidentia/templates/admfms.html
+++ b/ovidentia/skins/ovidentia/templates/admfms.html
@@ -289,12 +289,12 @@
 		</tr>
 		<tr>
 			<td class="BabWarningBodyBackground" align="center">
-				<a onclick="return confirm('{ notify_confirm }')" href="{ notifyurl }">{ notify }</a>
+				<a onclick="return bab_postLinkConfirm(this);" title="{ notify_confirm }" href="{ notifyurl }">{ notify }</a>
 			</td>
 		</tr>
 		<tr>
 			<td class="BabWarningBodyBackground" align="center">
-				<a onclick="return confirm('{ purge_confirm }')" href="{ purgeurl }">{ purge }</a>
+				<a onclick="return bab_postLinkConfirm(this);" title="{ purge_confirm }" href="{ purgeurl }">{ purge }</a>
 			</td>
 		</tr>
 	</table>
