--- a/ovidentia/skins/ovidentia/templates/artedit.html
+++ b/ovidentia/skins/ovidentia/templates/artedit.html
@@ -40,7 +40,7 @@ function confirm_submit(url)
 		<td>&nbsp;{ status }</td>
 		<td align="center">
 		<!--#if bsubmit -->
-		<a href="#" onclick="confirm_submit('{ bsubmiturl }');return false;" title="{ submittxt }"><img valign="absmiddle" src="{ babSkinPath }images/Puces/submit.gif" alt="{ submittxt }" border="0" /></a>
+		<a href="{ bsubmiturl }" onclick="return bab_postLinkConfirm(this);" title="{ submittxt }"><img valign="absmiddle" src="{ babSkinPath }images/Puces/submit.gif" alt="{ submittxt }" border="0" /></a>
 		<!--#else bsubmit -->&nbsp;
 		<!--#endif bsubmit -->
 		</td>
@@ -114,7 +114,7 @@ function confirm_submit(url)
 	<!--#in getnext -->
 	<tr class="BabSiteAdminFontBackground"> 
 		<td nowrap width="1%">
-			<a title="{ restoretxt }" href="{ restoreurl }"><img valign="absmiddle" src="{ babSkinPath }images/Puces/utrash.gif" alt="{ restoretxt }" border="0"></a>&nbsp;
+			<a onclick="return bab_postLinkConfirm(this);" href="{ restoreurl }"><img valign="absmiddle" src="{ babSkinPath }images/Puces/utrash.gif" alt="{ restoretxt }" border="0"></a>&nbsp;
 		</td>
 		<td><a title="{ previewtxt }" href="{ previewurl }" target="_blank" onclick="bab_popup(this.href);return false;">{ name }</a></td>
 		<td align="center">&nbsp;{ datecreate }</td>
@@ -123,7 +123,7 @@ function confirm_submit(url)
 	<!--#endin getnext -->
 	<tr class="BabSiteAdminTitleFontBackground"> 
 		<td>&nbsp;</td>
-		<td><a class="BabSiteAdminListLink" href="{ urladd }">{ addtxt }</a></td>
+		<td><a class="BabSiteAdminListLink" onclick="return bab_postLinkConfirm(this);" href="{ urladd }">{ addtxt }</a></td>
 		<td colspan="2">&nbsp;</td>
 	</tr>
 	</table>
@@ -169,8 +169,8 @@ window.focus();
 	<tr class="BabSiteAdminFontBackground"> 
 		<td  nowrap width="1%">
 			<!--#if bdelete -->
-			<a title="{ restoretxt }" href="{ restoreurl }"><img valign="absmiddle" src="{ babSkinPath }images/Puces/backarrow.gif" alt="{ restoretxt }" border="0"></a>
-			<a title="{ deletetxt }" href="{ deleteurl }"><img valign="absmiddle" src="{ babSkinPath }images/Puces/del.gif" alt="{ deletetxt }" border="0"></a>
+			<a onclick="return bab_postLinkConfirm(this);" href="{ restoreurl }"><img valign="absmiddle" src="{ babSkinPath }images/Puces/backarrow.gif" alt="{ restoretxt }" border="0"></a>
+			<a title="{ deletetxt }" onclick="return bab_postLinkConfirm(this);" href="{ deleteurl }"><img valign="absmiddle" src="{ babSkinPath }images/Puces/del.gif" alt="{ deletetxt }" border="0"></a>
 			<!--#endif bdelete -->
 		</td>
 		<td>
