--- a/ovidentia/skins/ovidentia/templates/images.html
+++ b/ovidentia/skins/ovidentia/templates/images.html
@@ -304,7 +304,7 @@ bab_initFunctions.push(function() {
 <tr><td nowrap>
 <small>{ imgname_txt }</small>&nbsp;
 </td>
-<td align=right width="1%"><a class="BabSiteAdminListLink" href="javascript:confirm_url('{ delurl }','{ msg_delfile }')"><img src="{ babSkinPath }images/Puces/del.gif" alt="{ del }"  border="0"></a>
+<td align=right width="1%"><a class="BabSiteAdminListLink" href="{ delurl }" title="{ msg_delfile }" onclick="return bab_postLinkConfirm(this);"><img src="{ babSkinPath }images/Puces/del.gif" alt="{ del }"  border="0"></a>
 </td></tr></table>
 </td>
 </tr>
@@ -332,7 +332,7 @@ bab_initFunctions.push(function() {
 	</small>&nbsp;
 	<!--#if badmin -->
 		</td>
-		<td align=right width="1%"><a class="BabSiteAdminListLink" href="javascript:confirm_url('{ delurl }','{ msg_deltree }')"><img src="{ babSkinPath }images/Puces/del.gif" alt="{ del }"  border="0"></a>
+		<td align=right width="1%"><a class="BabSiteAdminListLink" href="{ delurl }" title="{ msg_deltree }" onclick="return bab_postLinkConfirm(this);"><img src="{ babSkinPath }images/Puces/del.gif" alt="{ del }"  border="0"></a>
 		</td>
 	<!--#endif badmin -->
 	</tr></table>
@@ -369,7 +369,7 @@ bab_initFunctions.push(function() {
 	</small>&nbsp;
 </td>
 <!--#if badmin -->
-<td align=right width="1%"><a href="" onclick="confirm_url('{ delurl }','{ msg_delfile }');return false;"><img src="{ babSkinPath }images/Puces/del.gif" alt="{ del }"  border="0"></a>
+<td align=right width="1%"><a href="{ delurl }" title="{ msg_delfile }" onclick="return bab_postLinkConfirm(this)"><img src="{ babSkinPath }images/Puces/del.gif" alt="{ del }"  border="0"></a>
 </td>
 <!--#endif badmin -->
 </tr></table>
