Security on charset file

--- a/ovidentia/skins/ovidentia/templates/charset.html
+++ b/ovidentia/skins/ovidentia/templates/charset.html
@@ -3,7 +3,7 @@
 //<![CDATA[
 //]]>
 </script>
-<form method="get" action="{ babPhpSelf }">
+<form method="post" action="{ babPhpSelf }">
 	<input type="hidden" name="tg" value="charset" />
 	<input type="hidden" name="idx" value="convertSite" />
 	<input type="hidden" name="sFromCharset" value="{ m_datas[sFromCharset] }" />
